--- a/installjava.yml
+++ b/installjava.yml
@@ -1,15 +1,15 @@
 ---
-- hosts: mysampleUR
+- hosts: all
   become: yes
   tasks:
   - name: install java on ubuntu 18 nodes
     apt:
-      name: "{{myjavaonubuntu}}"
+      name: openjdk-8-jre
       state: present
     when: ansible_os_family =="Debian"
 
   - name: install java on redhat8 nodes
     yum:
-      name: "{{myjavaonredhat}}"
+      name: java-1.8.0-openjdk
       state: present
     when: ansible_os_family =="RedHat"
