--- a/installjava.yml
+++ b/installjava.yml
@@ -1,15 +1,15 @@
 ---
-- hosts: all
+- hosts: mysampleUR
   become: yes
   tasks:
   - name: install java on ubuntu 18 nodes
     apt:
-      name: openjdk-8-jre
+      name: "{{myjavaonubuntu}}"
       state: present
     when: ansible_os_family =="Debian"
 
   - name: install java on redhat8 nodes
     yum:
-      name: java-1.8.0-openjdk
+      name: "{{myjavaonubuntu}}"
       state: present
     when: ansible_os_family =="RedHat"
