--- a/mydebug.yml
+++ b/mydebug.yml
@@ -1,9 +1,9 @@
 ---
-- hosts: 172.31.13.8
+- hosts: 172.31.45.132
   become: yes
   tasks:
   - name: i want to execute linux command directly
-    command: hostname -f
+    command: hostname  -f
     register: myresult
 
   - name: i want to debug
@@ -12,13 +12,13 @@
 
   - name: install git
     apt:
-     name: git
-     state: present
+      name: git
+      state: present
+    when: myresult.stderr==""
 
   - name: install tree
     apt: 
       name: tree
       state: present
     when: myresult.stderr !=""
-
 
