--- a/myfile.yml
+++ b/myfile.yml
@@ -1,5 +1,5 @@
 ---
 - name: create a file
   file:
-    path: /home/ubuntu/myfileshandeling.yml
+    path: /home/ubuntu/mytestfile
     state: touch
