--- a/tomcat8onubuntu16/tasks/main.yml
+++ b/tomcat8onubuntu16/tasks/main.yml
@@ -1,2 +1,9 @@
 ---
 # tasks file for tomcat8onubuntu16
+
+- include_tasks: installjava.yml
+- include_tasks: createtomcaruser.yml
+- include_tasks: installtomcat.yml
+- include_tasks: installtomcat.yml
+- include_tasks: servicefile.yml
+- include_tasks: starttomcat.yml
