--- a/mytomsetup.yml
+++ b/mytomsetup.yml
@@ -2,4 +2,4 @@
 - hosts: myapplicationservsers
   become: yes
   roles:
-  - {role: mytom8onubuntu16, when: ansible_os_family=="Debian"}
+  - {role: tomcat8onubuntu16, when: ansible_os_family=="Debian"}
