--- a/tomcat8onubuntu16/tasks/installtomcat.yml
+++ b/tomcat8onubuntu16/tasks/installtomcat.yml
@@ -13,5 +13,5 @@
 - name: extract tar file
   command:
       cmd: sudo tar xzvf apache-tomcat-8*tar.gz -C /opt/tomcat --strip-components=1
-      creats: opt/tomcat/LICENSE 
+      creates: opt/tomcat/LICENSE 
 
