--- a/tomcat8onubuntu16/tasks/starttomcat.yml
+++ b/tomcat8onubuntu16/tasks/starttomcat.yml
@@ -1,7 +1,12 @@
 ---
-- name: start tomcat
+- name: reload tomcat
   systemd:
-    state: started
-    demon_reload: yes
+    daemon_reload: yes
     name: tomcat
-    enabled: yes
+    
+    
+- name: start tomcat
+  systemd: 
+    state: started
+    name: tomcat
+    enabled: True
